--- a/blockchain/docker-compose.yml
+++ b/blockchain/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "8545:8545"
       - "30303:30303"
     volumes:
-      - /${HOME}/ethereum:/root/.ethereum
-#   TODO:
-    command: -rpc --rpcaddr "0.0.0.0" console
+      - /${HOME}/.ethereum_geth:/root
+      - /${HOME}/.ethereum_private:/ethereum_private
+    command: --datadir=/ethereum_private --networkid 9871 --rpc --rpcaddr "0.0.0.0" console
+#    TODO
